Fix subsection vertical spacing

--- a/share/ocamlary.css
+++ b/share/ocamlary.css
@@ -40,6 +40,7 @@
 
 .ocamlary-doc .section {
     border-bottom: 1px solid #CCCCCC;
+    line-height: 1.3em;
 }
 
 .ocamlary-doc .keyword {
@@ -112,6 +113,7 @@
 
 /* Hover fragment links */
 .ocamlary-doc .region {
+    margin-top: 0.7em;
     margin-left: -1.3em;
     padding-left: 1.3em;
 }
